--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = Check pytorch + GPU is seted up
 long_description = file: README.md, LICENSE
 license = MIT License
 keywords = pytorch, GPU, test setup
-url = ""
+url = https://github.com/ademyanchuk/test_pytorch_gpu
 author = "Alexey Demyanchuk"
 author_email = alexeydemyanchuk@gmail.com
 classifiers =
