Add content type for proper rendering

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = test_pytorch_gpu
 version = attr: src.__version__
-description = Check pytorch + GPU is seted up
+description = Check pytorch + GPU is setted up
 long_description = file: README.md, LICENSE
+long_description_content_type = text/markdown
 license = MIT License
 keywords = pytorch, GPU, test setup
 url = https://github.com/ademyanchuk/test_pytorch_gpu
