Fix readme file name mismatch

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long_description_content_type = text/markdown
 license = MIT License
 keywords = pytorch, GPU, test setup
 url = https://github.com/ademyanchuk/test_pytorch_gpu
-author = "Alexey Demyanchuk"
+author = Alexey Demyanchuk
 author_email = alexeydemyanchuk@gmail.com
 classifiers =
     Development Status :: 3 - Alpha
